--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,18 +1,18 @@
-<!doctype html>
-<title>{% block title %}{% endblock %} - Bank</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<!DOCTYPE html>
+<title>{% block title %}{% endblock %} - Nome</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 <nav>
-  <h1><a href="/">Bank</a></h1>
+  <h1><a href="/">Nome</a></h1>
   <ul>
-    <li><a href="{{ url_for('account_index') }}">Accounts</a>
-    </ul>
-  </nav>
-  <section class="content">
-    <header>
-      {% block header %}{% endblock %}
-    </header>
-    {% for message in get_flashed_messages() %}
-      <div class="flash">{{ message }}</div>
-    {% endfor %}
-    {% block content %}{% endblock %}
-  </section>
+    <li><a href="{{ url_for('products_index') }}">Products</a></li>
+    <li><a href="{{ url_for('index') }}">Suppliers</a></li>
+    <li><a href="{{ url_for('index') }}">Clients</a></li>
+    <li><a href="{{ url_for('index') }}">Orders</a></li>
+  </ul>
+</nav>
+<section class="content">
+  <header style="display: flex">{% block header %}{% endblock %}</header>
+  {% for message in get_flashed_messages() %}
+  <div class="flash">{{ message }}</div>
+  {% endfor %} {% block content %}{% endblock %}
+</section>
