refactor: templates; feature: error handling on product create

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,5 +14,6 @@
   <header style="display: flex">{% block header %}{% endblock %}</header>
   {% for message in get_flashed_messages() %}
   <div class="flash">{{ message }}</div>
-  {% endfor %} {% block content %}{% endblock %}
+  {% endfor %}
+  {% block content %}{% endblock %}
 </section>
