--- a/app/templates/products/new.html
+++ b/app/templates/products/new.html
@@ -1,35 +1,20 @@
-{% extends 'base.html' %} {% block header %}
-<h1>{% block title %}New Product{% endblock %}</h1>
-{% endblock %} {% block content %}
-<form method="post">
-  <label for="sku">SKU*</label>
-  <input name="sku" id="sku" type="text" value="" required />
-  <label for="name">Name*</label>
-  <input name="name" id="name" type="text" value="" required />
-  <label for="description">Description*</label>
-  <textarea name="description" id="description" rows="4" required></textarea>
-  <label for="price">Price*</label>
-  <input
-    name="price"
-    id="price"
-    type="number"
-    min="0"
-    max="9999999999.99"
-    step="0.01"
-    placeholder="0.00"
-    value=""
-    required
-  />
-  <label for="ean">EAN</label>
-  <input
-    name="ean"
-    id="ean"
-    type="text"
-    value=""
-    pattern="[0-9]{13}"
-    maxlength="13"
-  />
-  <input type="submit" value="Create" />
-</form>
-<hr />
+{% extends 'base.html' %}
+{% block header %}
+  <h1>{% block title %}New Product{% endblock %}</h1>
+{% endblock %}
+{% block content %}
+  <form method="post">
+    <label for="sku">SKU*</label>
+    <input name="sku" id="sku" type="text" value="" maxlength="25" required />
+    <label for="name">Name*</label>
+    <input name="name" id="name" type="text" value="" maxlength="200" required />
+    <label for="description">Description*</label>
+    <textarea name="description" id="description" rows="4" required></textarea>
+    <label for="price">Price*</label>
+    <input name="price" id="price" type="number" min="0" max="9999999999.99" step="0.01" placeholder="0.00" value="" required/>
+    <label for="ean">EAN</label>
+    <input name="ean" id="ean" type="text" value="" pattern="[0-9]{13}" maxlength="13"/>
+    <input type="submit" value="Create"/>
+  </form>
+  <hr />
 {% endblock %}
