feature: product create don; fix: fixed issue where prices with decimal point would not be valid on new product

--- a/app/templates/products/index.html
+++ b/app/templates/products/index.html
@@ -17,9 +17,9 @@
           {{product['ean']}} {% endif %}
         </div>
       </div>
-      <a class="action" href="{{ url_for('products_edit', sku=product['sku'])}}"
-        >Edit</a
-      >
+      <a class="action" href="{{ url_for('products_edit', sku=product['sku'])}}">
+        Edit
+      </a>
     </header>
     <p class="body"><b>€ {{ product['price'] }}</b></p>
     <p class="body">{{ product['description'] }}</p>
