--- a/app/templates/suppliers/delete.html
+++ b/app/templates/suppliers/delete.html
@@ -4,7 +4,7 @@
 </h1>
 {% endblock %} {% block content %}
 <form method="post">
-    <label for="tin">Do you wish to delete the product with the following SKU:</label>
+    <label for="tin">Do you wish to delete the supplier with the following TIN:</label>
     <input name="tin" id="tin" type="text" value="{{ supplier['tin'] }}" disabled />
     <br/>
 
