--- a/app/templates/suppliers/index.html
+++ b/app/templates/suppliers/index.html
@@ -21,7 +21,7 @@
       </a>
     </header>
     <p class="body">{{ supplier['address'] }}</p>
-    <p class="body">Ends on: {{ supplier['date'] }}</p>
+    <p class="body"><b>Ends on:</b> {{ supplier['date'] }}</p>
   </article>
 {% if not loop.last %}
 <hr />
