--- a/app/templates/suppliers/new.html
+++ b/app/templates/suppliers/new.html
@@ -4,12 +4,12 @@
 {% endblock %}
 {% block content %}
   <form method="post">
-    <label for="tin">TIN</label>
-    <input name="tin" id="tin" type="text" value="" pattern="[0-9]{20}" maxlength="20"/>
+    <label for="tin">TIN*</label>
+    <input name="tin" id="tin" type="text" value="" pattern="[0-9]{20}" maxlength="20" required/>
     <label for="name">Name*</label>
     <input name="name" id="name" type="text" value="" maxlength="200" required />
-    <label for="adress">Adress*</label>
-    <input name="adress" id="adress" type="text" value="" maxlength="255" required />
+    <label for="address">Address*</label>
+    <input name="address" id="address" type="text" value="" maxlength="255" required />
     <label for="sku">SKU*</label>
     <input name="sku" id="sku" type="text" value="" maxlength="25" required />
     <label for="date">Date*</label>
