--- a/app/templates/products/edit.html
+++ b/app/templates/products/edit.html
@@ -18,6 +18,8 @@
   <input name="ean" id="ean" type="text" value="{{ product['ean'] }}" disabled/>
   {% endif %}
 
-  <input type="submit" value="Edit"/>
-</form>
+  <div class="button_holder">
+    <input type="submit" value="Edit"/>
+  </div>
+  </form>
 {% endblock %}
