--- a/app/static/style.css
+++ b/app/static/style.css
@@ -159,7 +159,8 @@ input.danger {
 
 input[type="submit"] {
   align-self: start;
-  min-width: 10em;
+  min-width: 15em;
+  min-height: 3em;
 }
 
 table {
@@ -174,4 +175,43 @@ td {
 
 thead th {
   width: 25%;
+}
+
+.button_holder{
+  text-align: center;
+  display: inline-block
+}
+
+.pagination {
+  display: inline-block;
+  text-align: center;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  margin: 0 3px;
+}
+
+.pagination a.active {
+  background-color: #377ba8;
+  color: white;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
+
+.pagination a:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.pagination a:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
