--- a/app/templates/suppliers/index.html
+++ b/app/templates/suppliers/index.html
@@ -1,10 +1,10 @@
 {% extends 'paged.html' %}
 {% block title %}Suppliers{% endblock %} 
 {% block header %}
-  <div">
-    <h1>Suppliers</h1>
-    <h3><a href="{{ url_for('suppliers_new')}}">New</a></h3>
-  </div>
+<div style = "clear:both; width: 100%">
+  <h1 style="float: left">Suppliers</h1>
+  <h1 style="float: right"><a href="{{ url_for('suppliers_new')}}">New</a></h1>
+</div>
 {% endblock %}
 {% block list %} 
 {% for supplier in suppliers %}
