--- a/app/static/style.css
+++ b/app/static/style.css
@@ -185,6 +185,7 @@ thead th {
 .pagination {
   display: inline-block;
   text-align: center;
+  margin: 5px
 }
 
 .pagination a {
@@ -198,13 +199,20 @@ thead th {
 }
 
 .pagination a.active {
-  background-color: #377ba8;
-  color: white;
+  background-color: #bae2fd;
+  color: #377ba8;
   border-radius: 5px;
   border: 1px solid #ddd;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a.etc {
+  .pagination a.active {
+    background-color: #bebebe;
+    color: white;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+  }
+}
 
 .pagination a:first-child {
   border-top-left-radius: 5px;
@@ -215,3 +223,5 @@ thead th {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
