feature: order index, pay

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <li><a href="{{ url_for('products_index') }}">Products</a></li>
     <li><a href="{{ url_for('suppliers_index') }}">Suppliers</a></li>
     <li><a href="{{ url_for('customers_index') }}">Customers</a></li>
-    <li><a href="{{ url_for('index') }}">Orders</a></li>
+    <li><a href="{{ url_for('orders_index') }}">Orders</a></li>
   </ul>
 </nav>
 <section class="content">
