--- a/app/static/style.css
+++ b/app/static/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  max-width: 960px;
+  max-width: 1000px;
   margin: 0 auto;
   background: white;
 }
@@ -15,9 +15,18 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-family: serif;
+h6{
+  font-family: 'Roboto', sans-serif;
   color: #377ba8;
+  font-weight: 400;
+  margin: 1rem 0;
+}
+
+h1.main-title {
+  font-family: 'Bebas Neue', sans-serif;
+  color: #377ba8;
+  font-weight: 600;
+  letter-spacing: 3px;
   margin: 1rem 0;
 }
 
@@ -35,11 +44,14 @@ nav {
   display: flex;
   align-items: center;
   padding: 0 0.5rem;
+  height: 3em;
 }
 
 nav h1 {
   flex: auto;
   margin: 0;
+  font-weight: 700;
+  font-size: 30px;
 }
 
 nav h1 a {
@@ -59,6 +71,8 @@ nav ul li span,
 header .action {
   display: block;
   padding: 0.5rem;
+  text-decoration: none;
+  font-weight: 600;
 }
 
 .content {
@@ -177,15 +191,16 @@ thead th {
   width: 25%;
 }
 
-.button_holder{
+.button_holder {
   text-align: center;
-  display: inline-block
+  display: inline-block;
 }
 
+/* PAGINATION BAR */
 .pagination {
   display: inline-block;
   text-align: center;
-  margin: 5px
+  margin: 5px;
 }
 
 .pagination a {
@@ -199,7 +214,7 @@ thead th {
 }
 
 .pagination a.active {
-  background-color: #bae2fd;
+  background-color: #e4f0f9;
   color: #377ba8;
   border-radius: 5px;
   border: 1px solid #ddd;
@@ -224,4 +239,105 @@ thead th {
   border-bottom-right-radius: 5px;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a:hover:not(.active, .etc) {
+  background-color: #ddd;
+}
+
+
+/* DASHBOARD BOXES */
+.box-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 50px;
+  margin: 3em;
+}
+
+.box {
+  height: 120px;
+  width: 280px;
+  border-radius: 20px;
+  box-shadow: 3px 3px 10px rgba(1, 40, 113, 0.751);
+  background-color: #e4f0f9;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.box:hover {
+  transform: scale(1.08);
+}
+
+.box-content {
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+ 
+.box-title {
+  font-size: 30px;
+  letter-spacing: 3px;
+}
+
+/* SUBTITLE BAR */
+.subtitle-bar {
+  width: 100%;
+  align-items: center;
+  margin: 5px
+}
+
+.subtitle-text {
+  float:left;
+  align-items: center;
+}
+
+.button {
+  height: 2px;
+  width: 50px;
+  border-radius: 20px;
+  box-shadow: 1px 1px 5px rgba(1, 40, 113, 0.751);
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+  float:right;
+  text-decoration: none;
+  margin:0.5em;
+}
+
+.button.new{
+  background-color: #e4f0f9;
+}
+
+.button.new:hover {
+  background-color: #cfe7f9;
+}
+
+.button.edit{
+  background-color: #e7e7e8;
+}
+
+.button.edit:hover{
+  background-color: #d6d6ea;
+}
+
+.button.delete{
+  background-color: #fcc7c7;
+}
+
+.button.delete:hover{
+  background-color: #f9abab;
+}
+
+/* CUSTOMIZING MATERIAL ICONS */
+
+.material-icons-outlined.md-80 { font-size: 80px;}
+.material-icons-outlined.md-20 { font-size: 20px; }
+.material-icons-outlined.blue { color:#377ba8}
+.material-icons-outlined.mr5  {margin-right: 5px;}
