--- a/app/templates/products/edit.html
+++ b/app/templates/products/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block header %}
-<h1>
-  {% block title %}Product | Edit{% endblock %}
-</h1>
+<div class="subtitle-bar">
+  <h1 class="subtitle-text">{% block title %}Product | Edit{% endblock %}</h1>
+</div>
 {% endblock %} {% block content %}
 <form method="post">
   <label for="sku">SKU</label>
