--- a/app/templates/products/new.html
+++ b/app/templates/products/new.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block header %}
-  <h1>{% block title %}New Product{% endblock %}</h1>
-{% endblock %}
+<div class="subtitle-bar">
+  <h1 class="subtitle-text">{% block title %}Product | New{% endblock %}</h1>
+</div>
+{% endblock%}
 {% block content %}
   <form method="post">
     <label for="sku">SKU*</label>
