--- a/app/templates/customers/new.html
+++ b/app/templates/customers/new.html
@@ -17,7 +17,8 @@
     <input name="phone" id="phone" type="text" value="" maxlength="15" />
     <label for="address">Address</label>
     <input name="address" id="address" type="text" value="" maxlength="255" />
-    <input type="submit" value="Create"/>
+    <div class="button_holder">
+      <input type="submit" class="confirm" value="Create"/>
+    </div>
   </form>
-  <hr />
 {% endblock %}
