--- a/app/templates/orders/index.html
+++ b/app/templates/orders/index.html
@@ -26,7 +26,7 @@
       
       {% if order['order_no'] in sales %}
         <div class="button paid">
-        <span class="material-icons-outlined md-20 blue mr5">
+        <span class="material-icons-outlined md-20 gray mr5">
           paid
           </span>
         Paid</div>
