--- a/app/templates/products/edit.html
+++ b/app/templates/products/edit.html
@@ -19,7 +19,7 @@
   {% endif %}
 
   <div class="button_holder">
-    <input type="submit" value="Edit"/>
+    <input type="submit" class="confirm" value="Confirm Edit"/>
   </div>
-  </form>
+</form>
 {% endblock %}
