--- a/app/templates/suppliers/new.html
+++ b/app/templates/suppliers/new.html
@@ -17,7 +17,8 @@
     <input name="sku" id="sku" type="text" value="" maxlength="25" required />
     <label for="date">Date*</label>
     <input name="date" id="date" type="date" value="" required />
-    <input type="submit" value="Create"/>
+    <div class="button_holder">
+      <input type="submit" class="confirm" value="Create"/>
+    </div>
   </form>
-  <hr />
 {% endblock %}
