--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
 <section class="content">
   <header style="display: flex">{% block header %}{% endblock %}</header>
   {% for category, message in get_flashed_messages(with_categories=true) %}
-  <div class="{{ category }}">{{ message }}</div>
+  <div class="{{ category }} flash">{{ message }}</div>
   {% endfor %}
   {% block content %}{% endblock %}
 </section>
