--- a/app/templates/products/delete.html
+++ b/app/templates/products/delete.html
@@ -6,72 +6,77 @@
 <form method="post">
     <label for="sku">Do you wish to delete the product with the following SKU:</label>
     <input name="sku" id="sku" type="text" value="{{ product['sku'] }}" disabled />
-    <br/>
     
     {% if orders|length %}
-    <label>By deleting this product, you will remove it's presence in the following orders:</label>
-    <table>
-        <tr>
-            <th>Order No.</th>
-            <th>Date No.</th>
-            <th>Customer No.</th>
-            <th>Customer Name</th>
-        </tr>
+    <div class="warning-box">
+        <h3 class="warning-header">WARNING</h3>
+        <label>By deleting this product, you will remove it's presence in the following <u>orders</u>:</label>
+        <table class="warning">
+            <tr>
+                <th>Order No.</th>
+                <th>Date No.</th>
+                <th>Customer No.</th>
+                <th>Customer Name</th>
+            </tr>
 
-        {% for order in orders %}
-        <tr>
-            <td>{{ order['order_no'] }}</td>
-            <td>{{ order['date'] }}</td>
-            <td>{{ order['cust_no'] }}</td>
-            <td>{{ order['name'] }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-    <br/>
+            {% for order in orders %}
+            <tr>
+                <td>{{ order['order_no'] }}</td>
+                <td>{{ order['date'] }}</td>
+                <td>{{ order['cust_no'] }}</td>
+                <td>{{ order['name'] }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
     {% endif %}
     
     {% if suppliers|length %}
-    <label>By deleting this product, you will also delete the following suppliers:</label>
-    <table>
-        <tr>
-            <th>TIN</th>
-            <th>Address</th>
-            <th>Name</th>
-        </tr>
+    <div class="warning-box">
+        <h3 class="warning-header">WARNING</h3>
+        <label>By deleting this product, you will also delete the following <u>suppliers</u>:</label>
+        <table class="warning">
+            <tr>
+                <th>TIN</th>
+                <th>Address</th>
+                <th>Name</th>
+            </tr>
 
-        {% for supplier in suppliers %}
-        <tr>
-            <th>{{ supplier['tin'] }}</th>
-            <th>{{ supplier['address'] }}</th>
-            <th>{{ supplier['name'] }}</th>
-        </tr>
-        {% endfor %}
+            {% for supplier in suppliers %}
+            <tr>
+                <td>{{ supplier['tin'] }}</td>
+                <td>{{ supplier['address'] }}</td>
+                <td>{{ supplier['name'] }}</td>
+            </tr>
+            {% endfor %}
 
-    </table>
-    <br/>
+        </table>
+    </div>
     {% endif %}
 
     {% if deliveries|length %}
-    <label>By deleting this product, you will also delete the following delivery records:</label>
-    <table>
-        <tr>
-            <th>TIN</th>
-            <th>Address</th>
-        </tr>
+    <div class="warning-box">
+        <h3 class="warning-header">WARNING</h3>
+        <label>By deleting this product, you will also delete the following <u>delivery</u> records:</label>
+        <table class="warning">
+            <tr>
+                <th>TIN</th>
+                <th>Address</th>
+            </tr>
 
-        {% for delivery in deliveries %}
-        <tr>
-            <th>{{ delivery['tin'] }}</th>
-            <th>{{ delivery['address'] }}</th>
-        </tr>
-        {% endfor %}
+            {% for delivery in deliveries %}
+            <tr>
+                <td>{{ delivery['tin'] }}</td>
+                <td>{{ delivery['address'] }}</td>
+            </tr>
+            {% endfor %}
 
-    </table>
-    <br/>
+        </table>
+    </div>
     {% endif %}
 
     <div class="button_holder">
-        <input type="submit" value="Cancel" formaction="{{ url_for('products_index') }}" formmethod="get" style="margin-right:5em" /> 
+        <input type="submit" class="cancel" value="Cancel" formaction="{{ url_for('products_index') }}" formmethod="get" style="margin-right:5em" /> 
         <input class="danger" type="submit" value="Delete"/>
     </div>
 </form>
