--- a/app/templates/products/new.html
+++ b/app/templates/products/new.html
@@ -10,8 +10,8 @@
     <input name="sku" id="sku" type="text" value="" maxlength="25" required />
     <label for="name">Name*</label>
     <input name="name" id="name" type="text" value="" maxlength="200" required />
-    <label for="description">Description*</label>
-    <textarea name="description" id="description" rows="4" required></textarea>
+    <label for="description">Description</label>
+    <textarea name="description" id="description" rows="4"></textarea>
     <label for="price">Price*</label>
     <input name="price" id="price" type="number" min="0" max="9999999999.99" step="0.01" placeholder="0.00" value="" required/>
     <label for="ean">EAN</label>
