styling: colors, order pay, underlines on tables, placeholders on input fields, nav bar updated

--- a/app/templates/suppliers/index.html
+++ b/app/templates/suppliers/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <a class="button delete" href="{{ url_for('suppliers_delete', tin=supplier['tin'])}}">
-        <span class="material-icons-outlined md-20 blue mr5">
+        <span class="material-icons-outlined md-20 red mr5">
           delete
           </span>
         Delete</a>
