--- a/app/templates/customers/index.html
+++ b/app/templates/customers/index.html
@@ -25,7 +25,7 @@
           </span>
         View Orders</a>
       <a class="button delete" href="{{ url_for('customers_delete', cust_no=customer['cust_no']) }}">
-        <span class="material-icons-outlined md-20 blue mr5">
+        <span class="material-icons-outlined md-20 red mr5">
           delete
           </span>
         Delete</a>
