--- a/app/templates/products/index.html
+++ b/app/templates/products/index.html
@@ -27,7 +27,7 @@
           </span>
         Edit</a>
       <a class="button delete" href="{{ url_for('products_delete', sku=product['sku'])}}">
-        <span class="material-icons-outlined md-20 blue mr5">
+        <span class="material-icons-outlined md-20 red mr5">
           delete
           </span>
         Delete</a>
