fix: small apearence change

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -81,7 +81,7 @@ header .action {
 
 nav ul li a:hover:not(.active) {
   background-color: rgb(193, 203, 210);
-  box-shadow:0 3px 6px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.18);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.18);
   transition: ease-in-out;
   transition-duration: 0.2s;
 }
@@ -256,7 +256,7 @@ input.danger {
   text-align: center;
 }
 
-.product-list-item-wrapper{
+.product-list-item-wrapper {
   max-height: 500px;
   overflow-y: auto;
 }
@@ -291,6 +291,7 @@ input.danger {
 
 .product-list-listing label {
   margin: 0;
+  font-weight: 400;
 }
 
 .product-list-listing input {
@@ -304,13 +305,13 @@ input.danger {
   padding: 5px;
   margin: 5px;
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
 }
 
-.product-list-total h3{
-  margin:0;
-  font-size:2;
+.product-list-total h3 {
+  margin: 0;
+  font-size: 2;
   color: #ffffff;
   margin-left: 50px;
   margin-right: 50px;
@@ -489,7 +490,7 @@ thead th {
 
 .button.delete {
   background-color: #fcc7c7;
-  color:#cc2f2e;
+  color: #cc2f2e;
 }
 
 .button.delete:hover {
@@ -526,7 +527,7 @@ thead th {
   color: #717171;
 }
 .material-icons-outlined.red {
-  color: #cc2f2e
+  color: #cc2f2e;
 }
 .material-icons-outlined.mr5 {
   margin-right: 5px;
