--- a/app/static/style.css
+++ b/app/static/style.css
@@ -65,7 +65,7 @@ nav h1 a {
 nav ul {
   display: flex;
   list-style: none;
-  margin: 0;
+  margin: 6px;
   padding: 0;
 }
 
@@ -73,21 +73,20 @@ nav ul li a,
 nav ul li span,
 header .action {
   display: block;
-  padding: 13px 1em;
+  padding: 14.75px 1em;
   text-decoration: none;
   font-weight: 600;
-  border-radius: 5px;
 }
 
 nav ul li a:hover:not(.active) {
   background-color: rgb(193, 203, 210);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.18);
   transition: ease-in-out;
   transition-duration: 0.2s;
 }
 
-nav ul li a .active {
-  background-color: #a9d8f7;
+nav ul li a.active {
+  background-color: #377ba8;
+  color: #a9d8f7;
 }
 
 .content {
